fixed issues with credentials

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-client_secret_314967254571-g0unjtqerrbla75chsajg5movs9p9ubi.apps.googleusercontent.com.json
+poetic-orb-430304-r9-c527b7c51815.json
 .env
